# kwin-effect-limitcolors

./: CMakeLists.txt  README.md  limitcolors.cpp  limitcolors.h  limitcolors_config.cpp  limitcolors_config.h  limitcolors_config.ui  limitcolors_kcfg.kcfg  limitcolors_kcfg.kcfgc  main.cpp  metadata.json
